--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -117,7 +117,7 @@
                 <section>
                     <h1>Marc & Christine Gallay</h1>
 
-                    <p>Pastoral couple of Gospel Center Lausanne</p>
+                    <p>Pastors</p>
                 </section>
 
             </article>
@@ -140,7 +140,7 @@
                 <section>
                     <h1>Patrick Bigler</h1>
 
-                    <p>Member of leadership team</p>
+                    <p>Core Leadership</p>
                 </section>
             </article>
 
@@ -151,7 +151,7 @@
                 <section>
                     <h1>Alix Bingle</h1>
 
-                    <p>Member of leadership team</p>
+                    <p>Core Leadership</p>
                 </section>
             </article>
 
@@ -162,7 +162,7 @@
                 <section>
                     <h1>Marc Rapelli</h1>
 
-                    <p>Member of leadership team</p>
+                    <p>Core Leadership</p>
                 </section>
             </article>
 
@@ -173,7 +173,29 @@
                 <section>
                     <h1>Timothée Rochat</h1>
 
-                    <p>Member of leadership team</p>
+                    <p>Core Leadership</p>
+                </section>
+            </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/FionaBenavides.jpg') }}"
+                     alt="Fiona Benavides"/>
+                <section>
+                    <h1>Fiona Benavides</h1>
+
+                    <p>Core Leadership</p>
+                </section>
+            </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/YoannGern.jpg') }}"
+                     alt="Yoann Gern"/>
+                <section>
+                    <h1>Yoann Gern</h1>
+
+                    <p>Core Leadership</p>
                 </section>
             </article>
         {% endspaceless %}
