--- a/web/sass/advanced/_youth.scss
+++ b/web/sass/advanced/_youth.scss
@@ -7,4 +7,206 @@
             margin-top: 70px;
         }
     }
+
+    #events {
+        margin-top: 40px;
+        margin-bottom: 70px;
+        text-align: left;
+        padding-bottom: 20px;
+        position: static;
+
+        h3 {
+            font-size: 1.4em;
+            padding-bottom: 20px;
+        }
+    }
+
+    a.events {
+        display: inline-block;
+        margin: 0 30px 20px 0;
+        color: $grayDarkGC;
+        text-decoration: none;
+        vertical-align: top;
+        font-size: 0.9em;
+
+        section {
+            display: block;
+            vertical-align: top;
+            width: 280px;
+
+            &.picture {
+                overflow: hidden;
+                max-height: 147px;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            &.detail {
+
+                h1 {
+                    font-family: $font-bold;
+                    text-transform: uppercase;
+                    font-size: 1.05em;
+                    line-height: 1.1em;
+                    text-align: left;
+                    margin-top: 5px;
+                }
+
+                time {
+                    margin-top: 5px;
+                    color: $grayGC;
+                    font-family: $font-light;
+                    text-transform: uppercase;
+                    display: block;
+                    text-align: left;
+                    font-size: 0.9em;
+                    line-height: 0.9em;
+                }
+
+                a.buttonLink {
+                    margin-top: 30px;
+                }
+            }
+        }
+
+    }
+
+    section#agenda {
+        margin-top: 70px;
+
+        h2 {
+            border-bottom: 3px solid $greenGC;
+            padding-bottom: 1px;
+            margin-top: 40px;
+
+            span {
+                color: $greenGC;
+                font-size: 1.35em;
+                line-height: 1.2em;
+                border: 3px solid $greenGC;
+                text-transform: uppercase;
+                font-family: $font-bold;
+                padding: 3px 4px 0;
+            }
+        }
+
+        a.date {
+            display: block;
+            margin: 0;
+            border-bottom: 1px solid $greenGC;
+            height: 70px;
+            color: $grayDarkGC;
+            cursor: pointer;
+
+            &:hover {
+                h1 {
+                    text-decoration: underline;
+                }
+            }
+
+            & > section {
+                display: inline-block;
+                vertical-align: top;
+                position: relative;
+                @include preserve-3d;
+
+                &.date {
+                    width: 170px;
+                    text-align: right;
+                    margin-top: 10px;
+
+                    time.day {
+                        display: block;
+                        padding-right: 10px;
+                        padding-top: 7px;
+                        padding-bottom: 7px;
+                    }
+
+                    time.date {
+                        display: block;
+                        padding-right: 10px;
+                        font-size: 1em;
+                        letter-spacing: 1px;
+                    }
+
+                    time.mobile {
+                        display: none;
+                    }
+                }
+
+                &.title {
+                    width: 560px;
+                    margin-top: 10px;
+
+                    div.container {
+                        height: 50px;
+                        border-left: 3px solid $greenGC;
+
+                        h1 {
+                            padding-left: 10px;
+                            font-size: 1.2em;
+                            @include vertical-align;
+                            letter-spacing: 0px;
+                            padding-right: 20px;
+                            line-height: 1.3em;
+                        }
+                    }
+                }
+
+                &.location {
+                    height: 50px;
+                    margin-top: 10px;
+
+                    span {
+                        @include vertical-align;
+                        display: block;
+                        font-family: $font-light;
+                        line-height: 1.6em;
+                    }
+
+                }
+            }
+        }
+
+        @media only screen and (max-width: 960px) {
+            padding: 0 16px;
+
+            a.date {
+
+                & > section {
+
+                    &.date {
+                        width: 18%;
+
+                        time.day {
+                            font-size: 0.9em;
+                        }
+
+                        time.date {
+                            font-size: 0.9em;
+                        }
+                    }
+
+                    &.title {
+                        width: 58%;
+
+                        div.container {
+
+                            h1 {
+                                font-size: 1.05em;
+                            }
+                        }
+                    }
+
+                    &.location {
+                        width: 24%;
+
+                    }
+                }
+
+            }
+        }
+    }
 }
