- update event add

--- a/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
@@ -54,6 +54,11 @@
                     {{ form_widget(form.text) }}
                     {{ form_errors(form.text) }}
 
+                    <h2>Category</h2>
+                    {{ form_widget(form.category) }}
+                    {{ form_errors(form.category) }}
+
+                    <h2>Location</h2>
                     {{ form_widget(form.location) }}
                     {{ form_errors(form.location) }}
                 </article>
